tests/baselines/reference/prototypeOnConstructorFunctions(strict=true).errors.txt
prototypeOnConstructorFunctions.ts(2,17): error TS7006: Parameter 'options' implicitly has an 'any' type.
prototypeOnConstructorFunctions.ts(2,27): error TS7006: Parameter 'element' implicitly has an 'any' type.
prototypeOnConstructorFunctions.ts(9,1): error TS2454: Variable 'i' is used before being assigned.


==== prototypeOnConstructorFunctions.ts (3 errors) ====
    interface I1 {
        const: new (options?, element?) => any;
                    ~~~~~~~~
!!! error TS7006: Parameter 'options' implicitly has an 'any' type.
                              ~~~~~~~~
!!! error TS7006: Parameter 'element' implicitly has an 'any' type.
    }
    
    
    var i: I1;
    
    
    i.const.prototype.prop = "yo";
    ~
!!! error TS2454: Variable 'i' is used before being assigned.
    